--- a/missing_aar_type_workaround.gradle
+++ b/missing_aar_type_workaround.gradle
@@ -75,7 +75,7 @@ def addMissingAarTypeToXml(xml) {
                             .children()[0]
                     String dependencyName = groupId + ":" + artifactId
                     boolean isProjectLibrary =
-                        groupId == 'androidx.media3'
+                        groupId == 'com.github.l1068'
                     boolean hasJar =
                         jar_only_dependencies.contains(dependencyName)
                     boolean hasAar =
