--- a/publish.gradle
+++ b/publish.gradle
@@ -26,7 +26,7 @@ afterEvaluate {
             publications {
                 release(MavenPublication) {
                     from components.release
-                    groupId = 'androidx.media3'
+                    groupId = 'com.github.l1068'
                     artifactId = findProperty('releaseArtifactId') ?: ''
                     version = findProperty('releaseVersion') ?: ''
                     pom {
