--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       NDK_VER: "26.1.10909125"
       PROJECT_USER: "l1068org"
@@ -63,21 +63,42 @@ jobs:
         popd
         pushd $PROJECT_NAME
 
-        echo "* Setting up AOMediaCodec libiamf"
+        echo "* Setting up Flac decoder module"
+        FLAC_MODULE_PATH=$MEDIA3_ROOT/libraries/decoder_flac/src/main          
+        cd "${FLAC_MODULE_PATH}/jni" && git clone https://github.com/xiph/flac.git libflac
+        popd
+        pushd $PROJECT_NAME
+        
+        echo "* Setting up IAMF decoder AOMediaCodec module"
         IAMF_MODULE_PATH=$MEDIA3_ROOT/libraries/decoder_iamf/src/main          
         cd "${IAMF_MODULE_PATH}/jni" && git clone https://github.com/AOMediaCodec/libiamf.git
         popd
         pushd $PROJECT_NAME
+
+        echo "* Setting up Opus decoder module"
+        OPUS_MODULE_PATH=$MEDIA3_ROOT/libraries/decoder_opus/src/main          
+        cd "${OPUS_MODULE_PATH}/jni" && git clone https://gitlab.xiph.org/xiph/opus.git libopus
+        popd
+        pushd $PROJECT_NAME
+
+        echo "* Setting up VP9 decoder module"
+        VP9_MODULE_PATH=$MEDIA3_ROOT/libraries/decoder_vp9/src/main          
+        cd "${VP9_MODULE_PATH}/jni" && git clone --depth=1 -b v1.8.0 https://chromium.googlesource.com/webm/libvpx libvpx
+        chmod +x ./generate_libvpx_android_configs.sh
+        ./generate_libvpx_android_configs.sh
+        ${NDK_PATH}/ndk-build APP_ABI=all -j4
+        popd
+        pushd $PROJECT_NAME
         
         ./gradlew bundleReleaseAar
-        #./gradlew :lib-decoder-{ffmpeg,av1}:bundleReleaseAar
+        #./gradlew :lib-decoder-{ffmpeg,av1,flac,iamf,opus,vp9}:bundleReleaseAar
         #./gradlew :lib-{common,exoplayer,extractor,ui,session,datasource,decoder,container}:bundleReleaseAar
         #./gradlew :lib-{exoplayer-dash,exoplayer-hls,exoplayer-smoothstreaming,exoplayer-rtsp}:bundleReleaseAar
         
         popd
         mkdir -p libs
         cp $MEDIA3_ROOT/libraries/*/buildout/outputs/aar/*-release.aar libs/
-        #cp $MEDIA3_ROOT/libraries/decoder_{ffmpeg,av1}/buildout/outputs/aar/*.aar libs/
+        #cp $MEDIA3_ROOT/libraries/decoder_{ffmpeg,av1,flac,iamf,opus,vp9}/buildout/outputs/aar/*.aar libs/
         #cp $MEDIA3_ROOT/libraries/{common,exoplayer,extractor,ui,session,datasource,decoder,container}/buildout/outputs/aar/*.aar libs/
         #cp $MEDIA3_ROOT/libraries/{exoplayer_dash,exoplayer_hls,exoplayer_smoothstreaming,exoplayer_rtsp}/buildout/outputs/aar/*.aar libs/
     
